--- a/src/main/resources/data/sabotage/lang/en_us.json
+++ b/src/main/resources/data/sabotage/lang/en_us.json
@@ -1,8 +1,9 @@
 {
   "gameType.sabotage.sabotage": "Sabotage",
-  "item.sabotage.sabotage_chest": "Sabotage Chest",
-  "item.sabotage.tester_wool": "Tester Wool",
-  "item.sabotage.tester_sign": "Tester Sign",
+  "block.sabotage.sabotage_chest": "Sabotage Chest",
+  "block.sabotage.tester_wool": "Tester Wool",
+  "block.sabotage.tester_sign": "Tester Sign",
+  "block.sabotage.wall_tester_sign": "Tester Sign",
   "item.sabotage.detective_shears": "Portable Tester",
 
   "map.sabotage.random": "Random",
